TASK-757789 Deleted SomeCalc class and configuration for JUnit5; Jakub Domanski